--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "debounce": "^1.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue-scrollto": "^2.8.0"
+    "vue-scrollto": "^2.8.0",
+    "vue-visible": "^1.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
