--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-scrollto": "^2.8.0",
-    "vue-visible": "^1.0.2"
+    "vue-visible": "^1.0.2",
+    "vue-masonry-css": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
@@ -47,8 +48,8 @@
     "sw-precache-webpack-plugin": "^0.11.4",
     "uglify-es": "^3.1.3",
     "url-loader": "^0.6.2",
+    "vue-lazyload": "^1.1.4",
     "vue-loader": "^13.3.0",
-    "vue-masonry-css": "^1.0.0",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.7.1",
