--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debounce": "^1.1.0",
     "he": "^1.1.1",
     "vue": "^2.5.2",
+    "vue-analytics": "^5.12.1",
     "vue-masonry-css": "^1.0.0",
     "vue-router": "^3.0.1",
     "vue-scrollto": "^2.8.0",
