--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
     "vue-masonry-css": "^1.0.0",
     "vue-router": "^3.0.1",
     "vue-scrollto": "^2.8.0",
-    "vue-visible": "^1.0.2"
+    "vue-visible": "^1.0.2",
+    "vuetify": "^1.5.12"
   },
   "devDependencies": {
-    "lodash": "^4.17.4",
-    "prerender-spa-plugin": "^2.1.0",
     "autoprefixer": "^7.1.5",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -34,7 +33,7 @@
     "chalk": "^2.1.0",
     "connect-history-api-fallback": "^1.4.0",
     "copy-webpack-plugin": "^4.1.1",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.16.2",
@@ -43,12 +42,17 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
+    "lodash": "^4.17.4",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
+    "prerender-spa-plugin": "^2.1.0",
     "rimraf": "^2.6.2",
     "semver": "^5.4.1",
     "shelljs": "^0.7.8",
+    "style-loader": "^0.23.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "sw-precache-webpack-plugin": "^0.11.4",
     "uglify-es": "^3.1.3",
     "url-loader": "^0.6.2",
